--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -vs --alluredir ./temp
+addopts = -vs --alluredir ./allure-results
 testpaths = ./cases
 python_files = test_*.py
 python_classes = Test*
